--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,8 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+result
+gensub.iml
+misc.xml
+modules.xml
