--- a/TemaPractica/.gitignore
+++ b/TemaPractica/.gitignore
@@ -102,7 +102,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-result
+# result
 gensub.iml
 misc.xml
 modules.xml
