--- a/Proiect/pom.xml
+++ b/Proiect/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>storm-server</artifactId>
             <version>2.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
