--- a/Proiect/pom.xml
+++ b/Proiect/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.21.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <pluginManagement>
