--- a/Proiect/pom.xml
+++ b/Proiect/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.8.4</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
